--- a/tv-show.html
+++ b/tv-show.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <button onclick="window.history.back()">Back</button>
+    <button onclick="window.location.href='https://rehspr.github.io/snow/watch.html'">Back</button>
     <h1 id="tv-show-title"></h1>
   </header>
   <main>
@@ -28,7 +28,7 @@
       <label for="episode-select">Episode:</label>
       <select id="episode-select"></select>
 
-      <iframe id="tv-show-player" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+      <iframe id="tv-show-player" width="100%" height="500" frameborder="0" allowfullscreen allow="autoplay"></iframe>
     </div>
   </main>
   <footer>
@@ -44,15 +44,22 @@
     const providerSelect = document.getElementById('provider-select');
     const player = document.getElementById('tv-show-player');
 
+    // Streaming provider embed formats
     const providers = {
-      vidora: (id, season, episode) => `https://vidora.su/embed/tv/${id}/${season}/${episode}`,
-      vidsrc: (id, season, episode) => `https://vidsrc.xyz/embed/tv?tmdb=${id}&season=${season}&episode=${episode}`,
-      godrive: (id, season, episode) => `https://godriveplayer.com/embed/tv?tmdb=${id}&season=${season}&episode=${episode}`
+      vidora: (id, season, episode) =>
+        `https://vidora.su/tv/${id}/${season}/${episode}?autoplay=true&colour=00ff9d&autonextepisode=true&backbutton=https://rehspr.github.io/snow/watch.html&logo=https://rehspr.github.io/favicon.png`,
+
+      vidsrc: (id, season, episode) =>
+        `https://vidsrc.xyz/embed/tv?tmdb=${id}&season=${season}&episode=${episode}`,
+
+      godrive: (id, season, episode) =>
+        `https://godriveplayer.com/embed/tv?tmdb=${id}&season=${season}&episode=${episode}`
     };
 
     async function fetchTVShowDetails() {
       const response = await fetch(`${apiUrl}/tv/${tvShowId}?api_key=${apiKey}&language=en-US`);
       const data = await response.json();
+
       document.getElementById('tv-show-title').textContent = data.name;
       document.getElementById('tv-show-overview').textContent = data.overview;
 
@@ -76,10 +83,8 @@
       const response = await fetch(`${apiUrl}/tv/${tvShowId}/season/${seasonNumber}?api_key=${apiKey}&language=en-US`);
       const data = await response.json();
 
-      // Clear existing options
       episodeSelect.innerHTML = '';
 
-      // Populate episode dropdown
       data.episodes.forEach(episode => {
         const option = document.createElement('option');
         option.value = episode.episode_number;
@@ -87,7 +92,6 @@
         episodeSelect.appendChild(option);
       });
 
-      // Load the first episode
       if (data.episodes.length > 0) {
         episodeSelect.value = data.episodes[0].episode_number;
         updatePlayer();
@@ -95,25 +99,23 @@
     }
 
     function updatePlayer() {
-      const selectedSeason = seasonSelect.value;
-      const selectedEpisode = episodeSelect.value;
-      const selectedProvider = providerSelect.value;
-      const embedUrl = providers[selectedProvider](tvShowId, selectedSeason, selectedEpisode);
-      player.src = embedUrl;
+      const season = seasonSelect.value;
+      const episode = episodeSelect.value;
+      const provider = providerSelect.value;
+
+      if (season && episode && providers[provider]) {
+        const embedUrl = providers[provider](tvShowId, season, episode);
+        player.src = embedUrl;
+      }
     }
 
     seasonSelect.addEventListener('change', async () => {
-      const selectedSeason = seasonSelect.value;
-      await fetchEpisodes(selectedSeason);
+      const season = seasonSelect.value;
+      await fetchEpisodes(season);
     });
 
-    episodeSelect.addEventListener('change', () => {
-      updatePlayer();
-    });
-
-    providerSelect.addEventListener('change', () => {
-      updatePlayer();
-    });
+    episodeSelect.addEventListener('change', updatePlayer);
+    providerSelect.addEventListener('change', updatePlayer);
 
     fetchTVShowDetails();
   </script>
